FHR-6205 update ab test jar for java 21 compatibility (#2)
* FHR-6205- update to java21

* FHR-6205- update to java21

* FHR-6205- update to remove duplication of licenses

* FHR-6205- update to remove duplication of licenses

* FHR-6205- update implementations to api

* FHR-6205: update the build and publish github actions workflows.
update the publication mechanism to use jreleaser

* FHR-6205: remove unnecessary step

* FHR-6205: expose required dependency

* FHR-6205: expose required dependency and add the dependencies in the published pom

---------

Co-authored-by: Cristian Avramescu <cavramescu@attraqt.com>